@@ -1,7 +1,6 @@
-package com.fourseason.delivery.domain.order.dto.response;
+package com.fourseason.delivery.domain.order.dto.response.impl;
 
-import static java.util.stream.Collectors.toList;
-
+import com.fourseason.delivery.domain.order.dto.response.OrderDetailsResponseDto;
 import com.fourseason.delivery.domain.order.entity.Order;
 import com.fourseason.delivery.domain.order.entity.OrderMenu;
 import com.fourseason.delivery.domain.order.entity.OrderStatus;
@@ -10,9 +9,10 @@ import java.time.LocalDateTime;
 import java.util.List;
 import lombok.Builder;
 
-public record OrderDetailResponseDto(
+public record OwnerOrderDetailsResponseDto(
     String shopName,
     String address,
+    String orderedUsername,
     String instruction,
     Integer totalPrice,
     OrderStatus status,
@@ -21,26 +21,28 @@ public record OrderDetailResponseDto(
     LocalDateTime createdAt,
     LocalDateTime updatedAt,
     String updatedBy
-) {
+) implements OrderDetailsResponseDto {
 
-  public OrderDetailResponseDto(Order order) {
+  public OwnerOrderDetailsResponseDto(Order order) {
     this(order.getShop().getName(),
         order.getAddress(),
+        order.getMember().getUsername(),
         order.getInstruction(),
         order.getTotalPrice(),
         order.getOrderStatus(),
         order.getOrderType(),
-        order.getOrderMenuList().stream().map(MenuDto::of).collect(toList()),
+        order.getOrderMenuList().stream().map(MenuDto::of).toList(),
         order.getCreatedAt(),
         order.getUpdatedAt(),
         order.getUpdatedBy()
     );
   }
 
-  public static OrderDetailResponseDto of(Order order) {
-    return new OrderDetailResponseDto(
+  public static OwnerOrderDetailsResponseDto of(Order order) {
+    return new OwnerOrderDetailsResponseDto(
         order.getShop().getName(),
         order.getAddress(),
+        order.getMember() == null ? "" : order.getMember().getUsername(),
         order.getInstruction(),
         order.getTotalPrice(),
         order.getOrderStatus(),
